# RRPS-Playground

./: README.md
rrps_playground/: README.md  pyproject.toml  setup.cfg
rrps_playground/build_backend/: backend.py
rrps_playground/numpy/: __init__.py
rrps_playground/rrps/: __init__.py  agents.py  buffer.py  cli.py  config.py  env.py  eval.py  league.py  learning.py  match.py  persona.py  types.py  utils.py
rrps_playground/scripts/: run_episode.py  selfplay_collect.py  tournament.py  train_q_learning.py
rrps_playground/tests/: test_action_mask.py  test_contracts.py  test_deception_features.py  test_determinism.py  test_env_basic.py
