[metadata]
name = rrps-playground
version = 0.1.0
description = Rock-Paper-Scissors with inventory playground
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =

[options.extras_require]
test =
    pytest
